@@ -12,16 +12,20 @@ import uk.gov.hmcts.reform.preapi.dto.reports.RecordingParticipantsReportDTO;
 import uk.gov.hmcts.reform.preapi.dto.reports.RecordingsPerCaseReportDTO;
 import uk.gov.hmcts.reform.preapi.dto.reports.ScheduleReportDTO;
 import uk.gov.hmcts.reform.preapi.dto.reports.SharedReportDTO;
+import uk.gov.hmcts.reform.preapi.dto.reports.UserPrimaryCourtReportDTO;
 import uk.gov.hmcts.reform.preapi.entities.AppAccess;
 import uk.gov.hmcts.reform.preapi.entities.Audit;
 import uk.gov.hmcts.reform.preapi.entities.Case;
+import uk.gov.hmcts.reform.preapi.entities.PortalAccess;
 import uk.gov.hmcts.reform.preapi.entities.Recording;
+import uk.gov.hmcts.reform.preapi.entities.ShareBooking;
 import uk.gov.hmcts.reform.preapi.enums.AuditLogSource;
 import uk.gov.hmcts.reform.preapi.enums.RecordingStatus;
 import uk.gov.hmcts.reform.preapi.exception.NotFoundException;
 import uk.gov.hmcts.reform.preapi.repositories.AppAccessRepository;
 import uk.gov.hmcts.reform.preapi.repositories.AuditRepository;
 import uk.gov.hmcts.reform.preapi.repositories.CaptureSessionRepository;
+import uk.gov.hmcts.reform.preapi.repositories.PortalAccessRepository;
 import uk.gov.hmcts.reform.preapi.repositories.RecordingRepository;
 import uk.gov.hmcts.reform.preapi.repositories.ShareBookingRepository;
 import uk.gov.hmcts.reform.preapi.repositories.UserRepository;
@@ -40,6 +44,7 @@ public class ReportService {
     private final AuditRepository auditRepository;
     private final UserRepository userRepository;
     private final AppAccessRepository appAccessRepository;
+    private final PortalAccessRepository portalAccessRepository;
 
     @Autowired
     public ReportService(CaptureSessionRepository captureSessionRepository,
@@ -47,13 +52,15 @@ public class ReportService {
                          ShareBookingRepository shareBookingRepository,
                          AuditRepository auditRepository,
                          UserRepository userRepository,
-                         AppAccessRepository appAccessRepository) {
+                         AppAccessRepository appAccessRepository,
+                         PortalAccessRepository portalAccessRepository) {
         this.captureSessionRepository = captureSessionRepository;
         this.recordingRepository = recordingRepository;
         this.shareBookingRepository = shareBookingRepository;
         this.auditRepository = auditRepository;
         this.userRepository = userRepository;
         this.appAccessRepository = appAccessRepository;
+        this.portalAccessRepository = portalAccessRepository;
     }
 
     @Transactional
@@ -71,7 +78,7 @@ public class ReportService {
             .countRecordingsPerCase()
             .stream()
             .map(data -> new RecordingsPerCaseReportDTO((Case) data[0], ((Long) data[1]).intValue()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
@@ -79,8 +86,8 @@ public class ReportService {
         return recordingRepository
             .findAllByParentRecordingIsNotNull()
             .stream()
+            .sorted(Comparator.comparing(Recording::getCreatedAt))
             .map(EditReportDTO::new)
-            .sorted(Comparator.comparing(EditReportDTO::getCreatedAt))
             .collect(Collectors.toList());
     }
 
@@ -89,13 +96,14 @@ public class ReportService {
         UUID courtId,
         UUID bookingId,
         UUID sharedWithId,
-        String sharedWithEmail
+        String sharedWithEmail,
+        boolean onlyActive
     ) {
         return shareBookingRepository
-            .searchAll(courtId, bookingId, sharedWithId, sharedWithEmail)
+            .searchAll(courtId, bookingId, sharedWithId, sharedWithEmail, onlyActive)
             .stream()
+            .sorted(Comparator.comparing(ShareBooking::getCreatedAt))
             .map(SharedReportDTO::new)
-            .sorted(Comparator.comparing(SharedReportDTO::getSharedAt))
             .collect(Collectors.toList());
     }
 
@@ -104,8 +112,8 @@ public class ReportService {
         return captureSessionRepository
             .findAllByStatus(RecordingStatus.RECORDING_AVAILABLE)
             .stream()
+            .sorted(Comparator.comparing(c -> c.getBooking().getScheduledFor()))
             .map(ScheduleReportDTO::new)
-            .sorted(Comparator.comparing(ScheduleReportDTO::getScheduledFor))
             .collect(Collectors.toList());
     }
 
@@ -116,7 +124,7 @@ public class ReportService {
                 .findAllAccessAttempts()
                 .stream()
                 .map(this::toPlaybackReport)
-                .collect(Collectors.toList());
+                .toList();
         } else if (source == AuditLogSource.PORTAL || source == AuditLogSource.APPLICATION) {
             final var activityPlay = "Play";
             final var functionalAreaVideoPlayer = "Video Player";
@@ -132,7 +140,7 @@ public class ReportService {
                 )
                 .stream()
                 .map(this::toPlaybackReport)
-                .collect(Collectors.toList());
+                .toList();
         } else {
             throw new NotFoundException("Report for playback source: " + source);
         }
@@ -143,8 +151,8 @@ public class ReportService {
         return recordingRepository
             .findAllByParentRecordingIsNull()
             .stream()
+            .sorted(Comparator.comparing(r -> r.getCaptureSession().getBooking().getScheduledFor()))
             .map(CompletedCaptureSessionReportDTO::new)
-            .sorted(Comparator.comparing(CompletedCaptureSessionReportDTO::getScheduledFor))
             .collect(Collectors.toList());
     }
 
@@ -153,8 +161,8 @@ public class ReportService {
         return shareBookingRepository
             .findAllByDeletedAtIsNotNull()
             .stream()
+            .sorted(Comparator.comparing(ShareBooking::getDeletedAt))
             .map(AccessRemovedReportDTO::new)
-            .sorted(Comparator.comparing(AccessRemovedReportDTO::getRemovedAt))
             .collect(Collectors.toList());
     }
 
@@ -165,7 +173,7 @@ public class ReportService {
             .stream()
             .map(this::getParticipantsForRecording)
             .flatMap(List::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<RecordingParticipantsReportDTO> getParticipantsForRecording(Recording recording) {
@@ -175,10 +183,21 @@ public class ReportService {
             .getParticipants()
             .stream()
             .map(participant -> new RecordingParticipantsReportDTO(participant, recording))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private PlaybackReportDTO toPlaybackReport(Audit audit) {
+        // S28-3604 discovered audit details records Recording Id as recordingId _and_ recordinguid
+        var auditDetails = audit.getAuditDetails() != null && !audit.getAuditDetails().isNull();
+        UUID recordingId = null;
+        if (auditDetails) {
+            if (audit.getAuditDetails().hasNonNull("recordingId")) {
+                recordingId = UUID.fromString(audit.getAuditDetails().get("recordingId").asText());
+            } else if (audit.getAuditDetails().hasNonNull("recordinguid")) {
+                recordingId = UUID.fromString(audit.getAuditDetails().get("recordinguid").asText());
+            }
+        }
+
         return new PlaybackReportDTO(
             audit,
             audit.getCreatedBy() != null
@@ -186,13 +205,27 @@ public class ReportService {
                 .findById(audit.getCreatedBy())
                 .orElse(appAccessRepository.findById(audit.getCreatedBy())
                             .map(AppAccess::getUser)
-                            .orElse(null))
+                            .orElse(portalAccessRepository.findById(audit.getCreatedBy())
+                                        .map(PortalAccess::getUser)
+                                        .orElse(null)))
                 : null,
-            audit.getAuditDetails() != null && audit.getAuditDetails().hasNonNull("recordingId")
-                ? recordingRepository
-                .findById(UUID.fromString(audit.getAuditDetails().get("recordingId").asText()))
-                .orElse(null)
+            recordingId != null
+                ? recordingRepository.findById(recordingId).orElse(null)
                 : null
         );
+    }
+
+    @Transactional
+    public List<UserPrimaryCourtReportDTO> reportUserPrimaryCourts() {
+
+        return this.appAccessRepository.getUserPrimaryCourtsForReport()
+            .stream()
+            .map(access -> new UserPrimaryCourtReportDTO(access.getUser().getFirstName(),
+                                                         access.getUser().getLastName(),
+                                                         access.getCourt().getName(),
+                                                         access.isActive(),
+                                                         access.getRole().getName(),
+                                                         access.getLastAccess()))
+            .toList();
     }
 }
